@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds.plugins.inc,v 1.2 2009/10/21 20:01:18 alexb Exp $
+// $Id: feeds.plugins.inc,v 1.3 2010/01/12 16:28:02 alexb Exp $
 
 /**
  * @file
@@ -113,7 +113,7 @@ function _feeds_feeds_plugins() {
       'description' => 'Parse RSS and Atom feeds.',
       'help' => 'Use <a href="http://simplepie.org">SimplePie</a> to parse XML feeds in RSS 1, RSS 2 and Atom format.',
       'handler' => array(
-        'parent' => 'FeedsParser',
+        'parent' => 'FeedsSyndicationParser',
         'class' => 'FeedsSimplePieParser',
         'file' => 'FeedsSimplePieParser.inc',
         'path' => $path,
